# rpr

./: .gitignore  Cargo.toml
.github/workflows/: docs.yml
docs/: .rustc_info.json  index.html
docs/doc/: search-index.js  settings.html  source-files.js
docs/doc/rand/: trait.CryptoRng.html  trait.RngCore.html  trait.SeedableRng.html
docs/doc/rpr/: all.html  fn.main.html  index.html  sidebar-items.js
docs/doc/rpr/cli/: fn.process_args.html  index.html  sidebar-items.js
docs/doc/rpr/config/: index.html  sidebar-items.js  struct.Config.html  struct.Remote.html  struct.Repository.html
docs/doc/rpr/state/: index.html  sidebar-items.js  struct.Action.html  struct.State.html  struct.Task.html
docs/doc/src/rpr/: cli.rs.html  config.rs.html  main.rs.html  state.rs.html
docs/release/.fingerprint/aho-corasick-a3970218ed57ce92/: doc-lib-aho_corasick  doc-lib-aho_corasick.json
docs/release/.fingerprint/aho-corasick-f71a613d0a10eb22/: lib-aho_corasick  lib-aho_corasick.json
docs/release/.fingerprint/ansi_term-26aecb80903c4c8d/: lib-ansi_term  lib-ansi_term.json
docs/release/.fingerprint/ansi_term-cf7a716cadfb9abf/: doc-lib-ansi_term  doc-lib-ansi_term.json
docs/release/.fingerprint/atty-1308471bde846588/: lib-atty  lib-atty.json
docs/release/.fingerprint/atty-37822f8d064b620c/: lib-atty  lib-atty.json
docs/release/.fingerprint/atty-5f23930ecfc13528/: doc-lib-atty  doc-lib-atty.json
docs/release/.fingerprint/atty-e6ac7b01bafc2555/: doc-lib-atty  doc-lib-atty.json
src/: cli.rs  config.rs  main.rs  state.rs
src/state/: cli.rs
(+239 files in other folders)
