[package]
name = "rpr"
version = "0.0.0"
authors = ["Ross Murray <rossmurray@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
env_logger = "0.8.3"
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
chrono = "0.4.19"

[dev-dependencies]
tempfile = "3.2.0"